# bridge.rs

./: .cargo-packages-liner.toml  .drone.yml  .rustfmt.toml  CHANGELOG.md  CODEOWNERS  Cargo.toml  Dockerfile  Makefile.toml  README.md  catalog-info.yaml  deny.toml  docker-compose.yml  mise.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml
examples/: auth0.rs  example.rs  gen_token.rs  graphql.rs  graphql_multipart.rs  rest.rs  rest_multipart.rs  threads.rs
src/: auth0_config.rs  auth0_configuration.rs  builder.rs  collection.rs  errors.rs  lib.rs  main.rs  prelude.rs  redirect.rs  request.rs  response.rs  test  token_dispenser.rs
src/auth0/: client.rs  config.rs  errors.rs  keyset.rs  mod.rs  refresh.rs  token.rs  util.rs
src/auth0.bak/: config.rs  keyset.rs  mod.rs  token.rs
src/auth0.bak/cache/: crypto.rs  mod.rs
src/auth0/cache/: crypto.rs  dynamodb.rs  inmemory.rs  mod.rs  redis_impl.rs
src/blocking/: mod.rs  request.rs  response.rs
src/cache/: inmemory.rs  mod.rs  redis.rs  redis_cache.rs
src/request/: body.rs  grpc.rs  mod.rs  otel.rs
src/request/request_type/: graphql.rs  mod.rs  rest.rs
src/response/: graphql.rs
src/token_dispenser/: async_impl.rs  blocking.rs  cache.rs  jwks.rs  mod.rs
src/token_dispenser/async_impl/: dispenser.rs  jwks.rs  mod.rs
src/v2/: body.rs  mod.rs
src/v2/request/: graphql.rs  mod.rs  rest.rs
tests/: bridge_tests.rs  graphql.rs  rest.rs
tests/async_auth0/: builder.rs  graphql.rs  mod.rs  rest.rs
tests/async_bridge/: graphql.rs  graphql_multipart.rs  mod.rs  rest.rs  rest_multipart.rs
tests/async_circuit_breaker/: graphql.rs  mod.rs  rest.rs
tests/blocking/: graphql.rs  rest.rs
tests/common/: auth0_context.rs  mod.rs
tests/resources/: howdy_world.txt
tests/resources/auth0/: jwks.json  test_cert_key.pem
tests/resources/graphql/: error.json  error_non_null_response.json  error_with_data.json  hero.graphql  response.json
